apps/alloy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: alloy
  labels:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/part-of: alloy
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "12345"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alloy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
